# nsu-study

bos/addrspace/: env.c  exec.c  makefile  malloc.c  overflow.c  prot.c  vars.c
bos/communication/: buffer.c  makefile  pipe.c  signal.c
bos/compilation/: hello-dynamic.c  hello-runtime.c  hello-static.c  makefile
bos/compilation/dynamic/: dynamic-hello.c  dynamic-hello.h
bos/compilation/runtime/: runtime-hello.c  runtime-hello.h
bos/compilation/static/: static-hello.c  static-hello.h
bos/files/: libmanager.c  makefile  manager.c  pagemap.c  realpath.c  reverse.c
bos/files/dir1/: hello.c
bos/files/dir1/dir2/: slink
bos/process/: lifecycle  lifecycle.c  makefile  reaper  reaper.c
bos/syscalls/: asmhello.c  hello.c  makefile  nolibs.c  syshello.c  sysinfo.c  sysinfo.h  trace.c  unihello.c
bos/users/: makefile  read.c
bpp/: connect.sh
bpp/async-mpi/: guide
bpp/connect/: cluster-key  cluster-key.pub  connect-cluster.sh  connect-server.sh  lin_oppusers_id_rsa.priv
bpp/examples/mpi/: consecutive-output.c  mpi-init.c  rank.c  reduce-sum.c  sendrecv-async.c  sendrecv-ring.c
bpp/grid-mpi/: gen.c  grid.c  guide  makefile  matrix.c  matrix.h  opp35-pr4.docx  submit.sh
bpp/life-mpi/: hash64.c  liblife.c  liblife.h  life.c  makefile  opp35-pr5.docx
bpp/life-mpi/data/: time.ods
bpp/posix-mpi/: balance.c  balance.h  guide.txt  makefile  opp35-pr6.docx
bpp/slae/: opp35-pr2.docx  par.c
bpp/slae-mpi/: check-solution.sh  makefile  measure-time.sh  opp35-pr2.docx  par.c  seq.c  slae.c
bpp/slae-mpi/data/: time.csv  time.ods
bpp/slae-omp/: check-time.sh  gen.c  makefile  omp.c  omp.ods  opp35-pr3.docx  slae.h
bpp/two-vectors/: consequtive.c  makefile  opp35-pr1.docx  parallel-collective.c  parallel-ptp.c  time.sh
bpp/two-vectors/data/: acceleration.csv  efficiency.csv  time.csv  time.ods
c/binary-search/: arr-search.c  binary-search.c  bs-lower.c  bs-upper.c  fountain.c
c/dp/: substr.c
c/geometry/: area  area.c  area.cpp  intersection  intersection.c  shell  shell.c  shell.txt  shell1.txt  text  triangle  triangle.c
c/graph/: bfs-queue.c  bfs.c  cycles.c  dfs.c  maze.c  perm.c  top-sort.c
c/nsu-labs/: .gitlab-ci.yml
c/nsu-labs/lab-begin/src/: main.c
c/nsu-labs/lab0/src/: main.c
c/nsu-labs/lab1-0/: CMakeLists.txt
c/nsu-labs/lab1-0/src/: cyclebuffer.c  cyclebuffer.h  main.c  stoptable.c  stoptable.h
c/nsu-labs/lab1-1/: CMakeLists.txt
c/nsu-labs/lab1-1/src/: cyclebuffer.c  cyclebuffer.h  hash.c  hash.h  main.c
c/nsu-labs/lab1-2/: CMakeLists.txt
c/nsu-labs/lab1-2/src/: cyclebuffer.c  cyclebuffer.h  main.c
c/nsu-labs/lab10/: CMakeLists.txt
c/nsu-labs/lab10/src/: constraints.h  geometry.c  geometry.h  main.c  sort.c  sort.h  stack.c  stack.h
c/nsu-labs/lab11/src/: main.c
c/nsu-labs/lab2/src/: main.c
c/nsu-labs/lab3-0/src/: main.c
c/nsu-labs/lab3-1/src/: main.c
c/nsu-labs/lab4/: CMakeLists.txt
c/nsu-labs/lab4/src/: input.c  input.h  main.c  stack.c  stack.h
c/nsu-labs/lab5/: CMakeLists.txt
c/nsu-labs/lab5/src/: bitio.c  bitio.h  huffman.c  huffman.h  main.c  minheap.c  minheap.h  ptree.c  ptree.h  reader.c  reader.h
c/nsu-labs/lab6-0/: CMakeLists.txt
c/nsu-labs/lab6-0/src/: avltree.c  avltree.h  main.c
c/nsu-labs/lab6-1/: CMakeLists.txt
c/nsu-labs/lab6-1/src/: main.c  rbtree.c  rbtree.h
c/nsu-labs/lab6-3/: CMakeLists.txt
c/nsu-labs/lab6-3/src/: main.c  radixtree.c  radixtree.h  strbuffer.c  strbuffer.h
c/nsu-labs/lab7/: CMakeLists.txt  README.md
c/nsu-labs/lab7/src/: constraints.h  graph.c  graph.h  main.c  stack.c  stack.h
c/nsu-labs/lab8-0/src/: dsu.c  dsu.h  main.c
c/nsu-labs/lab8-1/: CMakeLists.txt
c/nsu-labs/lab8-1/src/: graph.c  graph.h  main.c  (+2 more)
c/nsu-labs/lab9/: CMakeLists.txt
c/rabin-karp/: hash.c  patterns.txt
c/recursive-calculator/: calcualtor.c
c/strings/: string-min.c
c/xor/: double-xor.c  single-xor.c  swap-xor.c
cpp/: .gitignore
cpp/lab0a/: main.cpp  makefile  module1.cpp  module2.cpp  module3.cpp  module3.h
cpp/lab0b/: in.txt  lorem.txt  main.cpp  makefile  out.csv  ru.txt  words-stat.cpp  words-stat.h  words-writer.cpp  words-writer.h
cpp/lab1/: CMakeLists.txt
cpp/lab1/src/: bit-array.cpp  bit-array.h
cpp/lab1/test/: test.cpp
cpp/lab2/: CMakeLists.txt
cpp/lab2/data/: beacon.lif  empty-birth-rule.lif  empty-rule.lif  empty-survival-rule.lif  missing-birth-rule.lif  missing-cells.lif  missing-rule-literals.lif  missing-rule-sep.lif  missing-rule-values.lif  missing-rules.lif  missing-survival-rule.lif  pulsar.lif  simulating.lif  unknown-rule.lif  wrong-cells-2.lif  wrong-cells.lif  wrong-format.lif  wrong-name.lif  wrong-rule-values-2.lif  wrong-rule-values.lif
cpp/lab2/src/: controller.cpp  controller.h  game.cpp  parser.cpp  parser.h  patterns.cpp  patterns.h  render.cpp  render.h  simulator.cpp  simulator.h
cpp/lab2/test/: test.cpp
cpp/lab3/: CMakeLists.txt
cpp/lab3/src/: config-parser.cpp  config-parser.h  converter.cpp  converter.h  errors.h  main.cpp  parser.cpp  parser.h  soundp.cpp  soundp.h  wav.cpp  wav.h
cpp/lab3/src/converters/: cropper.cpp  cropper.h  gainer.cpp  gainer.h  mixer.cpp  mixer.h  muter.cpp  muter.h
cpp/lab3/test/: test.cpp
cpp/lab4/: CMakeLists.txt
cpp/lab4/data/: data.csv
cpp/lab4/src/: csv-parser.hpp  main.cpp  student.hpp  tuple-print.hpp
cpp/lab4/test/: test.cpp
evmpu/pr1/: evm035-pr1.docx  makefile  prog.cpp  time.sh
evmpu/pr2/: evm035-pr2.docx  prog-O0.s  prog-O3.s
evmpu/pr3/: evm035-pr3.docx  prog-O0.s  prog-O3.s  prog.c
evmpu/pr4/: camera.cpp  evm035-pr4.docx  makefile  usb-example.cpp  usb.cpp
evmpu/pr5/: avx.c  blas.c  compare.sh  evm035-pr5.docx  main.c  makefile  matrix.c  matrix.h  naive.c  sse.c
evmpu/pr6/: evm035-pr6.docx  main.c  makefile  measure.csv
evmpu/pr7/: evm035-pr7.docx  main.c  makefile  measure.csv
java/: cheatsheet  setup-project
java/calculator/: .project  pom.xml
java/calculator/data/: almost-empty.calc  sum.calc
java/hello/: .project  pom.xml
java/minesweeper/: .project  pom.xml
java/wordcount/: .project  pom.xml
java/wordcount/data/: input.txt  lorem.txt
(+82 files in other folders)
